# MakeCrazyPenny

./: .env.example  .gitignore  CLAUDE.md  CONTRACT.md  README.md  RESEARCH.md  plan.md  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: chart-analyst.md  hype-scout.md  news-reader.md
.claude/commands/: strategy-review.md  trade-swarm.md
.claude/workflows/: strategy-review.js  trade-swarm-fanout.js
makecrazypenny/: __init__.py  mcp_server.py
makecrazypenny/analysis/: __init__.py  backtest.py  crypto_metrics.py  crypto_regime.py  factors.py  indicators.py  leverage.py  regime.py  risk.py
makecrazypenny/core/: __init__.py  config.py  crypto_universe.py  disclaimer.py  errors.py  redact.py  sectors.py  symbols.py  types.py  universe.py
makecrazypenny/execution/: __init__.py  hyperliquid.py
makecrazypenny/orchestration/: __init__.py  agents.py  crypto.py  crypto_screen.py  debate.py  journal.py  main.py  market.py  paper_trade.py  portfolio.py  screen.py
makecrazypenny/providers/: __init__.py  alpha_vantage.py  base.py  binance.py  bybit.py  cache.py  circuit.py  coingecko.py  edgar.py  fear_greed.py  finnhub.py  fmp.py  hyperliquid_info.py  marketaux.py  news_rss.py  ratelimit.py  registry.py  social.py  stockwatcher.py  yfinance_provider.py
makecrazypenny/servers/: __init__.py  _common.py  _sdk.py  congress.py  crypto.py  orchestration.py  reports.py  sentiment.py  synthesis.py  technical.py
makecrazypenny/ui/: __init__.py  dashboard.py  launch.py
research-out/: DESIGN-SWARM.md  critique.json  docsMap.json  execMap.json  hlSrc.json  metricsRes.json  newsSrc.json  orchRes.json  pipeMap.json  provMap.json  review-confirmed.json  review-refuted.json  sentimentSrc.json  summary.json
tests/: __init__.py  conftest.py  test_analysis.py  test_binance_flow.py  test_cache.py  test_circuit.py  test_crypto_engine.py  test_crypto_metrics.py  test_crypto_providers.py  test_crypto_regime.py  test_crypto_screen.py  test_crypto_server.py  test_crypto_universe.py  test_debate.py  test_execution.py  test_financial_calibration.py  test_hl_info.py  test_imports.py  test_indicators.py  test_journal.py  test_leverage.py  test_market.py  test_mcp_server.py  test_metrics_v2.py  test_paper_trade.py  test_portfolio.py  test_providers.py  test_ratelimit.py  test_redact.py  test_registry.py  test_screen.py  test_servers.py  test_social_news.py  test_swarm_gate_fixes.py  test_ui.py  test_universe.py
